k8s/overlays/dev/dev-pull-policy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: api-gateway
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: auth-service
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: wallet-service
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: transaction-service
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: notification-service
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: IfNotPresent
