k8s/overlays/dev/dev-resource-requests-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: api-gateway
          resources:
            requests:
              cpu: "75m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: auth-service
          resources:
            requests:
              cpu: "75m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: notification-service
          resources:
            requests:
              cpu: "75m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: transaction-service
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: swiftpay
spec:
  template:
    spec:
      containers:
        - name: wallet-service
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
