k8s/overlays/dev/dev-scale-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: swiftpay
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: swiftpay
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: swiftpay
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: swiftpay
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: swiftpay
spec:
  replicas: 1
